General fixes and improvements

--- a/playPadel/website/templates/gestore/crea_impianto.html
+++ b/playPadel/website/templates/gestore/crea_impianto.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 {% load crispy_forms_filters %}
 
-{% block title %} PlayPadel - Modifica dati {% endblock %}
+{% block title %} PlayPadel - Crea impianto {% endblock %}
 
 {% block content %}
 
