--- a/playPadel/website/templates/website/prenota.html
+++ b/playPadel/website/templates/website/prenota.html
@@ -1,6 +1,7 @@
 {% extends "playPadel/base.html" %}
 
 {% load static %}
+
 {% load crispy_forms_tags %}
 {% load crispy_forms_filters %}
 
@@ -30,7 +31,7 @@
                                 <option value="90">90 min.</option>
                                 <option value="120">120 min.</option>
                             </select>
-                            <div class="invalid-feedback">Example invalid custom select feedback</div>
+                            <div class="invalid-feedback">Seleziona un'opzione valida</div>
                         </div>
                     </div>
                 </div>
