--- a/playPadel/templates/playPadel/base.html
+++ b/playPadel/templates/playPadel/base.html
@@ -39,7 +39,7 @@
                                     <a href="{% url 'website:gestore:dashboard_gestore' %}" class="dropdown-item">Dashboard & Impianto</a>
                                     <a href="{% url 'website:gestore:modifica_gestore' %}" class="dropdown-item">Modifica dati</a>
                                     <a href="{% url 'website:gestore:modifica_impianto_gestore' %}" class="dropdown-item">Modifica impianto</a>
-                                {% elif user.is_cliente %}
+                                {% else %}
                                     <a href="{% url 'website:cliente:dashboard_cliente' %}" class="dropdown-item">Dashboard & Storico</a>
                                     <a href="{% url 'website:cliente:modifica_cliente' %}" class="dropdown-item">Modifica dati</a>
                                     <a href="{% url 'website:cliente:prenotazioni_cliente' %}" class="dropdown-item">Prenotazioni</a>
