--- a/playPadel/templates/registration/signup_form.html
+++ b/playPadel/templates/registration/signup_form.html
@@ -38,7 +38,7 @@
                             {{ user_form2.email|as_crispy_field }}
                         </div>
                         <div class="form-group">
-                            {{ user_form3.foto|as_crispy_field }}
+                            {{ user_form2.foto|as_crispy_field }}
                         </div>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
                         <div class="alert alert-warning mt-3" role="alert">
                             <strong>Attenzione! </strong>Una volta creato l'utente è necessario <strong>accedere</strong> e proseguire anche con la creazione dell'impianto!
                         </div>
-                        <button type="submit" class="btn btn-primary">Continua</button>
+                        <button type="submit" class="btn btn-primary">Registrati</button>
                 {% endif %}
             </form>
         </div>
