--- a/playPadel/website/templates/cliente/dashboard_cliente.html
+++ b/playPadel/website/templates/cliente/dashboard_cliente.html
@@ -93,7 +93,7 @@
                             </div>
                         </div>
                         <div class="col-md-12 mt-2">
-                            <img src="{% static 'img/profile_pics' %}/{{ user.cliente.foto }}" class="img-fluid" style="max-height: 250px" alt="Foto cliente">
+                            <img src="{% static 'img' %}/{{ user.foto }}" class="img-fluid" style="max-height: 250px" alt="Foto cliente">
                         </div>
                     </div>
                 </div>
