--- a/playPadel/website/templates/website/cerca_impianto.html
+++ b/playPadel/website/templates/website/cerca_impianto.html
@@ -23,7 +23,7 @@
             <div class="card-deck justify-content-center">
                 {% for impianto in object_list %}
                     <div class="card my-3" style="min-width: 21rem; max-width: 21rem;">
-                        <img class="card-img-top" src="{% static 'img/media' %}/{{ impianto.foto }}" alt="Foto impianto" style="max-height: 15rem; min-height:15rem; opacity: 0.9;  object-fit: cover; object-position: center">
+                        <img class="card-img-top" src="{% static 'img' %}/{{ impianto.foto }}" alt="Foto impianto" style="max-height: 15rem; min-height:15rem; opacity: 0.9;  object-fit: cover; object-position: center">
                         <div class="card-body">
                             <h5 class="card-title">{{ impianto.nome }}</h5>
                             <p class="card-text">{{ impianto.posizione }}</p>
