--- a/playPadel/website/templates/website/impianto_detail.html
+++ b/playPadel/website/templates/website/impianto_detail.html
@@ -1,6 +1,7 @@
 {% extends "playPadel/base.html" %}
 
 {% load static %}
+
 {% load crispy_forms_tags %}
 {% load crispy_forms_filters %}
 
@@ -51,15 +52,15 @@
                                     <h5 class="ml-3 mt-2">Informazioni sul gestore dell'impianto</h5>
                                 </div>
                                 <div class="d-flex align-items-center mt-3">
-                                    <img src="{% static 'img/profile_pics' %}/{{ object.gestore.foto }}" class="rounded-circle ml-3 border border-info" alt="Foto del gestore" style="width: 100px; height: 100px;">
-                                    <p class="ml-5 mb-0"><strong>{{ object.gestore.user.first_name }} {{ object.gestore.user.last_name }}</strong></p>
+                                    <img src="{% static 'img' %}/{{ object.gestore.foto }}" class="rounded-circle ml-3 border border-info" alt="Foto del gestore" style="width: 100px; height: 100px;">
+                                    <p class="ml-5 mb-0"><strong>{{ object.gestore.first_name }} {{ object.gestore.last_name }}</strong></p>
                                 </div>
                             </div>
                         </li>
                     </ul>
                 </div>
                 <div class="col-md-6 text-center">
-                    <img src="{% static 'img/media' %}/{{ object.foto }}" class="img-fluid rounded" alt="Foto dell'impianto" style="max-height: 450px">
+                    <img src="{% static 'img' %}/{{ object.foto }}" class="img-fluid rounded" alt="Foto dell'impianto" style="max-height: 450px">
                 </div>
             </div>
             {% if news %}
@@ -121,7 +122,7 @@
                                 <option value="90">90 min.</option>
                                 <option value="120">120 min.</option>
                             </select>
-                            <div class="invalid-feedback">Example invalid custom select feedback</div>
+                            <div class="invalid-feedback">Selezionare un'opzione valida</div>
                         </div>
                     </div>
                 </div>
