--- a/playPadel/website/templates/website/modifica_user.html
+++ b/playPadel/website/templates/website/modifica_user.html
@@ -9,7 +9,7 @@
             <div class="row align-items-center">
                 {% if pre_url == dashboard_url or pre_url == modifica_url %}
                     <div class="col-md-2 text-left">
-                        <a href="{% url 'website:cliente:dashboard_cliente' %}" class="btn btn-outline-dark" data-toggle="tooltip" data-placement="top" title="Torna alla dashboard">
+                        <a href="{% url 'website:'|add:user_type|add:':dashboard_'|add:user_type %}" class="btn btn-outline-dark" data-toggle="tooltip" data-placement="top" title="Torna alla dashboard">
                             <i class="bi bi-arrow-left mr-2"></i>Dashboard
                         </a>
                     </div>
@@ -17,48 +17,56 @@
                     <div class="col-md-2"></div>
                 {% endif %}
                 <div class="col-md-8 text-center">
-                    <h2>Modifica dati cliente</h2>
+                    <h2>Modifica dati {{ user_type }}</h2>
                 </div>
                 <div class="col-md-2"></div>
             </div>
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
-                <div class="row mt-4 justify-content-between">
-                    <div class="form-inline mx-3">
-                        <label for="username" class="mr-2">Username:</label>
-                        {{ user_form.username }}
+                <div class="row mt-4">
+                    <div class="col-md-6">
+                        <div class="form-groups mx-3">
+                            <label for="username" class="mr-2">Username:</label>
+                            {{ user_form.username }}
+                        </div>
                     </div>
-                    <div class="form-inline mx-3">
-                        <label for="first_name" class="mr-2">Nome:</label>
-                        {{ user_form.first_name }}
-                    </div>
-                    <div class="form-inline mx-3">
-                        <label for="last_name" class="mr-2">Cognome:</label>
-                        {{ user_form.last_name }}
+                    <div class="col-md-6">
+                        <div class="form-group mx-3">
+                            <label for="email" class="mr-2">Email:</label>
+                            {{ user_form.email }}
+                        </div>
                     </div>
                 </div>
-                <div class="row mt-3 justify-content-start">
-                    <div class="form-inline mx-3">
-                        <label for="email" class="mr-2">Email:</label>
-                        {{ user_form.email }}
+                <div class="row mt-3">
+                    <div class="col-md-6">
+                        <div class="form-group mx-3">
+                            <label for="first_name" class="mr-2">Nome:</label>
+                            {{ user_form.first_name }}
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group mx-3">
+                            <label for="last_name" class="mr-2">Cognome:</label>
+                            {{ user_form.last_name }}
+                        </div>
                     </div>
                 </div>
                 <div class="form-control-file my-3">
                     <label for="foto" class="mr-2">Foto profilo:</label>
-                    {{ cliente_form.foto }}
+                    {{ user_form.foto }}
                 </div>
                 <hr>
                 <div class="form-inline my-3">
                     <label for="old_password" class="mr-2">Vecchia Password:</label>
-                    {{ cliente_form.old_password }}
+                    {{ user_form.old_password }}
                 </div>
                 <div class="form-inline my-3">
                     <label for="new_password1" class="mr-2">Nuova Password:</label>
-                    {{ cliente_form.new_password1 }}
+                    {{ user_form.new_password1 }}
                 </div>
                 <div class="form-inline my-3">
                     <label for="new_password2" class="mr-2">Conferma Nuova Password:</label>
-                    {{ cliente_form.new_password2 }}
+                    {{ user_form.new_password2 }}
                 </div>
 
                 <button type="submit" class="btn btn-primary">Salva Modifiche</button>
