--- a/playPadel/website/templates/gestore/dashboard_gestore.html
+++ b/playPadel/website/templates/gestore/dashboard_gestore.html
@@ -6,26 +6,6 @@
 
 {% block content %}
 
-    <div class="modal fade" id="ModalConferma" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Attenzione!</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    Stai per eliminare una <strong>prenotazione effettuata da un cliente!</strong><br>Sei sicuro di voler continuare?
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Annulla</button>
-                    <a href="{% url 'website:homepage' %}" role="button" class="btn btn-primary">Continua</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <section class="section py-1" style="min-height: 83vh;">
         <div class="container bg-white text-black text text-center py-5">
             <h2>Dashboard gestore <strong>{{ user.username }}</strong></h2>
@@ -73,7 +53,7 @@
                             </div>
                         </div>
                         <div class="col-md-4 text-right">
-                            <a href="{% url 'website:gestore:modifica_impianto_gestore' %}" class="btn btn-outline-info btn-sm" role="button">Modifica Impianto</a>
+                            <a href="{% url 'website:gestore:modifica_impianto_gestore' impianto.slug %}" class="btn btn-outline-info btn-sm" role="button">Modifica Impianto</a>
                         </div>
                     </div>
                     <div class="row mt-2">
@@ -103,6 +83,22 @@
                         <div class="col-md-12 text-left">
                             <i class="bi bi-info-circle mr-1"></i>
                             {{ impianto.caratteristiche }}
+                        </div>
+                    </div>
+                    <div class="row mt-4">
+                        <div class="col-md-8">
+                            <div class="row">
+                                <i class="bi bi-calendar3 mr-3" style="font-size: 1.3rem"></i>
+                                <h4 class="mb-0">Prenotazioni clienti</h4>
+                                {% if prenotazioni_clienti %}
+                                    <span class="badge badge-primary ml-3 my-auto">{{ prenotazioni_clienti|length }}</span>
+                                {% else %}
+                                    <span class="badge badge-primary ml-3 my-auto">0</span>
+                                {% endif %}
+                            </div>
+                        </div>
+                        <div class="col-md-4 text-right">
+                            <a href="{% url 'website:gestore:prenotazioni_gestore' %}" class="btn btn-outline-success btn-sm" role="button">Visualizza tutte</a>
                         </div>
                     </div>
                 </div>
@@ -135,7 +131,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-5">
+            <hr class="hr" />
+            <div class="row mt-4">
                 <i class="bi bi-newspaper mr-3" style="font-size: 1.3rem"></i><h4>News Impianto</h4>
                 <div class="col-md-12 mt-2">
                     <ul class="list-group list-group-flush">
@@ -160,37 +157,6 @@
                             </li>
                         {% empty %}
                             <h5 class="py-4 mt-4 text-center">Nessuna news pubblicata...</h5>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-            <hr class="hr" />
-            <div class="row mt-4">
-                <i class="bi bi-calendar3 mr-3" style="font-size: 1.3rem"></i>
-                <h4 class="mb-0">Prenotazioni clienti</h4>
-                {% if prenotazioni_clienti %}
-                    <span class="badge badge-primary ml-3 my-auto">{{ prenotazioni_clienti.count }}</span>
-                {% else %}
-                    <span class="badge badge-primary ml-3 my-auto">0</span>
-                {% endif %}
-                <div class="col-md-12 mt-2">
-                    <ul class="list-group list-group-flush">
-                        {% for p in prenotazioni_clienti %}
-                            <li class="list-group-item">
-                                <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-1">{{ p.data }} | {{ p.ora_inizio }} - {{ p.ora_fine }}</h5>
-                                    <button class="btn btn-outline-danger btn-sm " data-toggle="modal" data-placement="top" id="{{ p.id }}" data-target="#ModalConferma" title="Cancella prenotazione">
-                                        <i class="bi bi-trash"></i>
-                                    </button>
-                                </div>
-                                <p class="mb-1 text-left">
-                                    <strong>Impianto: </strong>{{ p.impianto.nome }} - Campo {{ p.campo.numero }} {{ p.campo.tipologia }}<br>
-                                    <strong>Username cliente: </strong>{{ p.cliente.username }}
-                                </p>
-                                <small><strong>ID prenotazione: </strong>{{ p.id }}</small>
-                            </li>
-                        {% empty %}
-                            <h5 class="py-4 mt-4 text-center">Nessuna prenotazione futura effettuata dai clienti...</h5>
                         {% endfor %}
                     </ul>
                 </div>
