Fixes and done cancella_prenotazione

--- a/playPadel/website/templates/cliente/dashboard_cliente.html
+++ b/playPadel/website/templates/cliente/dashboard_cliente.html
@@ -63,7 +63,7 @@
                         <div class="row mt-2">
                             <div class="col-md-12 text-left">
                                 <i class="bi bi-geo-alt mr-1"></i>
-                                {{ prenotazioni.last.impianto.nome }} - Campo {{ prenotazioni.last.campo.id }} {{ prenotazioni.last.campo.tipologia }}
+                                {{ prenotazioni.last.impianto.nome }} - Campo {{ prenotazioni.last.campo.numero }} {{ prenotazioni.last.campo.tipologia }}
                             </div>
                         </div>
                         <div class="row mt-2">
